--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "@babel/preset-env": "7.20.2",
     "@fullhuman/postcss-purgecss": "^5.0.0",
     "eslint": "8.36.0",
+    "littlefoot": "4.0.0-9",
     "prettier": "^2.8.0"
   },
   "dependencies": {
     "autoprefixer": "^10.4.13",
-    "littlefoot": "3.4.1",
     "postcss": "^8.4.20",
     "postcss-cli": "^10.1.0"
   }
