--- a/.github/workflows/manga-sync.yml
+++ b/.github/workflows/manga-sync.yml
@@ -7,7 +7,7 @@ on:
     - cron: '0 18 * * *'
   workflow_dispatch:
 jobs:
-  build:
+  sync:
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout
