--- a/.github/workflows/audit-links.yml
+++ b/.github/workflows/audit-links.yml
@@ -5,7 +5,7 @@ on:
     - cron: '0 18 * * 6'
   workflow_dispatch:
 jobs:
-  build:
+  audit-links:
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout
