Add One Piece Odyssey and Watch Dogs 2 to in progress list

--- a/data/games.yml
+++ b/data/games.yml
@@ -6,6 +6,16 @@
       link: https://www.igdb.com/games/dragon-ball-z-kakarot
       platform: PC
       title: "Dragon Ball Z: Kakarot"
+    - cover: https://images.igdb.com/igdb/image/upload/t_cover_big/co5x13.png
+      id: 194837
+      link: https://www.igdb.com/games/one-piece-odyssey
+      platform: PC
+      title: "One Piece Odyssey"
+    - cover: https://images.igdb.com/igdb/image/upload/t_cover_big/co2p3j.png
+      id: 19441
+      link: https://www.igdb.com/games/watch-dogs-2
+      platform: PC
+      title: "Watch Dogs 2"
 - list: Stalled but occasionally progress is made
   games:
     - cover: https://images.igdb.com/igdb/image/upload/t_cover_big/co2evj.jpg
