Fix Stress Prescription author

--- a/data/books.yml
+++ b/data/books.yml
@@ -13,6 +13,7 @@
 
   - title: The Seven-Day Stress Prescription
     subtitle: null
+    author: Elissa Epel
     cover: https://covers.openlibrary.org/b/id/14304273-L.jpg
     link: https://openlibrary.org/works/OL27774869W/The_Stress_Prescription
     date_finished: null
